# csce306_portfolio

./: Bird.cpp  Bird.h  CMakeLists.txt  ClassCourse.cpp  ClassCourse.h  LICENSE  NewDate.cpp  NewDate.h  README.md  ReadingTask.cpp  Task.cpp  Task.h  WritingTask.cpp  WritingTask.h  main  main.cpp
